--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "main": "example.js",
-  "name": "undefined",
+  "name": "david",
   "version": "0.0.1",
   "dependencies": {
     "async": "^2.1.4",
