--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cheerio": "^0.22.0",
     "express": "^4.14.0",
     "iconv": "^2.2.1",
+    "jade": "^1.11.0",
     "jade-bootstrap": "^1.0.9",
     "node-cron": "^1.1.2",
     "nodemailer": "^2.7.0",
