--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jade-bootstrap": "^1.0.9",
     "node-cron": "^1.1.2",
     "nodemailer": "^2.7.0",
+    "nodemailer-mandrill-transport": "^1.2.0",
     "request": "^2.79.0",
     "utf8": "^2.1.2"
   },
