--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "nodemailer": "^2.7.0",
     "nodemailer-mandrill-transport": "^1.2.0",
     "request": "^2.79.0",
-    "utf8": "^2.1.2"
+    "utf8": "^2.1.2",
+    "xoauth2": "^1.2.0"
   },
   "scripts": {
     "start": "node ./bin/www"
